I polished up pretty much all of my CSS and HTML, I still need to fix my project opacity as makinmg the default visibility or opacity none to give it a more futureistic look

--- a/Desktop/Advanced E - Port/styles.css
+++ b/Desktop/Advanced E - Port/styles.css
@@ -25,7 +25,7 @@ button {
 }
 
 section {
-  background-color: rgb(245, 245, 245);
+  background-color: #f2c744;
 }
 
 .container {
@@ -57,10 +57,11 @@ section {
   text-align: left;
   margin-bottom: 12px;
   line-height: 1;
+  color: #F2F2F2;
 }
 
 .jade {
-  color: #adefd1ff !important;
+  color: #404040 !important;
 }
 
 /*
@@ -95,8 +96,8 @@ Landing Page
 }
 
 .social__link {
-  background-color: #f06449;
-  color: white;
+  background-color: #F2F2F2;
+  color: #404040;
   padding: 6px;
   width: 32px;
   height: 32px;
@@ -114,8 +115,8 @@ Landing Page
   font-size: 32px;
   border-radius: 50%;
   border: none;
-  background-color: #242424;
-  color: white;
+  background-color: #F2F2F2;
+  color: #404040;
   position: absolute;
   bottom: 32px;
   right: 40px;
@@ -180,6 +181,7 @@ nav {
   filter: invert(1);
   display: flex;
   justify-content: flex-start;
+  color: white;
 }
 
 .nav__link--list {
@@ -233,7 +235,7 @@ PROJECTS
   left: 90px;
   transform: translatey(100%);
   opacity: 0;
-  transition: transform 0.5s ease , opacity 0.5s ease;
+  transition: transform 0.5s ease, opacity 0.5s ease;
   color: white;
   max-width: 600px;
 }
@@ -247,8 +249,6 @@ PROJECTS
   transform: scale(1.07);
   filter: blur(5px);
 }
-
-
 
 .project__wrapper:hover .project__wrapper--bg {
   opacity: 0.7;
@@ -288,10 +288,30 @@ PROJECTS
 footer {
   background-color: #242424;
   display: flex;
+  padding: 6% 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo--img {
+  width: 70px;
+  filter: invert(1);
+}
+
+.footer__social--list {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-around;
+  margin: 28px 0;
 
 }
 
-.footer__container {
-  margin: 0 auto;
+.footer__social--link,
+.footer__copyright {
+  color: white;
 }
-
